# hpc_project

./: CMakeLists.txt  PROBLEM_STATEMENT.md
common/: lib.h
root/: root_main.c
worker/: worker_main.c
